# SecurityComps2026

./: .gitignore  LICENSE  LiteratureReview.md  README.md  index.html
assets/: index-BUNdztW_.js  index-D5JkWZuw.css  index-DpYsILSe.css  index-KuoXkg_g.js  index-mtqKsRQ-.js
jeff/: feedback-20250112.md
project/: .dockerignore  CONTRIB.md  docker-compose.pi-exp.yml  docker-compose.pi.yaml  docker-compose.yaml  node_exporter_local_cmd.txt
project/nodes/attacker1/: Dockerfile  Dockerfile.wrk2-builder  MASTER_CONFIG.json  README.md  docker-compose.pi-exp.yml  docker-compose.pi.yaml  docker-compose.yaml  requirements.txt
project/nodes/attacker1-john/: MASTER_CONFIG.json  docker-compose.pi.yaml  docker-compose.yaml  dockerfile
project/nodes/attacker2/: .env  Dockerfile  Dockerfile.pi  MASTER_CONFIG.json  docker-compose.pi-exp.yaml  docker-compose.pi.yaml  docker-compose.yaml  requirements.txt
project/nodes/attacker3/: Dockerfile  MASTER_CONFIG.json  README.md  docker-compose.pi-exp.yaml  docker-compose.pi.yaml  docker-compose.yaml  requirements.txt
project/nodes/cAdvisor/: docker-compose.yaml
project/nodes/docker-exporter/: docker-compose.yaml
project/shared/node_monitor/: MASTER_CONFIG.json  SETUP.md  config.py  fastapi.py  pyproject.toml  registry.py
project/shared/node_monitor/collectors/: cpu.py  disk.py  fastapi.py  network.py
project/shared/node_monitor/node_monitor/: config.py  fastapi.py  registry.py  requirements.txt
project/shared/node_monitor/node_monitor/collectors/: cpu.py  memory.py  network.py  sys_cpu.py  sys_memory.py  sys_network.py
(+108 files in other folders)
