[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "node-monitor"
version = "0.1.0"

dependencies = [
    "fastapi",
    "prometheus-fastapi-instrumentator",
    "prometheus_client",
    "psutil",
    "python-dotenv"
]

[tool.setuptools]
packages = ["node_monitor"]
